Fixed split dashboard on mobile/tablet

--- a/frontend/src/scss/utilities/_containers.scss
+++ b/frontend/src/scss/utilities/_containers.scss
@@ -119,4 +119,9 @@
     align-items: center;
     min-height: 100vh;
   }
+  &.mobile {
+    @include wi-mq(tablet) {
+      flex-direction: column;
+    }
+  }
 }
